--- a/VRChat/64/1064964.html
+++ b/VRChat/64/1064964.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "od0ZEtSPdEyQTtYshRK/e+3Vwy31qfXoXw3SVpDXVTI="></script>
+    "8Cr4BxVnbA8WA2hrCvGVncN/nFX6mIScuys6tvOhR5A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AnimationTimeController 音にあわせてアニメーションを調整","description":"VRChatでパーティクルライブ作成時など、Unityでの再生中に音とアニメーションの時間をいじる、簡単なコンポーネントだよ。\n\nバチャフェスとかVRストリートライブのパーティクルライブアニメーションを作るときに使いました。\n\n当時、オノッチさんが作ってくれたものや、他で公開されていたパーティクル、専用シェーダー付きのメッシュの位置や大きさ、表示タイミングなどを、わたしが時間に追われながら、アニメーション制作してたのです。ぐふふ。\n\n\n＜使い方＞\n\nパーティクルのメインAnimatorのあるオブジェクトにくっつけて、audioも設定、Unity実行中にエディタ側でanimTimeをいじりつつ、Animationを編集したりしてね。\n\nAnimation録画編集中にこのコンポーネントのanimTimeを変えるとその時間も記録されちゃうので、animTimeいじるときは録画ボタンをオフにするか、間違えて記録されたanimTimeのアニメーションをあとで削除してね。\n\n※パーティクル側のStartDelayなどで出現時間を全コントロールしているときにはこれだと無理です。\n\n※VRChatアップロード時には、このコンポーネントを外してください。\n\n※なお、パーティクルライブの表示、非表示についてはこのコンポーネントは無関係です。VRChatアバターのアニメーションオーバーライドもしくは、いわゆるEmoteSwitchを使ったりすると表示できます。でも、その仕組みを変に使うとみんなの邪魔、迷惑行為になっちゃうので（そうすると禁止されたりする可能性もあるし）、使うときはくれぐれもご注意を！","url":"https://booth.pm/ja/items/1064964","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1064964/d83780e1-98ae-4175-8387-a902dd5fe18f_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="od0ZEtSPdEyQTtYshRK/e+3Vwy31qfXoXw3SVpDXVTI="></script>
+    nonce="8Cr4BxVnbA8WA2hrCvGVncN/nFX6mIScuys6tvOhR5A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -415,9 +415,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
