--- a/VRChat/50/1064950.html
+++ b/VRChat/50/1064950.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "AoV6C3sxheDfhhTcZSK6wzFOBLX3GddtliGIhlDEiBQ="></script>
+    "Fk+SEKDCi1Xhs/lFVjkjFXbwvkSq6oTbJvYqzVObdys="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け「ビードロ」","description":"ポルトガルから長崎に伝わったガラス細工で、息を吹きこんだり吸ったりすることでぽっぴんという可愛らしい音を奏でます。\n(モデルにビードロの音は入っていません)\n\nこのビードロは主に個人がVRChatでアバターに装着したり、ワールドに置くことを想定しています。\n\nポリゴン数は616です。\n\npoppenシェイプキーを使うとビードロの底がペコペコ動かせます。\n\n球体側面部のUV展開配列を整えているので自分で好きなガラス模様を描くことができます。\n\nユニティパッケージになっています。\n","url":"https://booth.pm/ja/items/1064950","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1064950/3246b0a9-e637-4685-a00b-0488b7bd6cbb_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AoV6C3sxheDfhhTcZSK6wzFOBLX3GddtliGIhlDEiBQ="></script>
+    nonce="Fk+SEKDCi1Xhs/lFVjkjFXbwvkSq6oTbJvYqzVObdys="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -390,9 +390,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
