--- a/VRChat/74/1064174.html
+++ b/VRChat/74/1064174.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vvAkvq7zVR7tKtaOx6UFOvLfjuLNuoNDejoKA9VinDI="></script>
+    "a5+SvRC/EEeNBsPkSewA+aOXdaEK/uPJeJSTXdgFnzs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRMのみ】NEKO FANTASY 黒魔道士","description":"VRMアバター　「NEKO FANTASY 黒魔道士」\n\nポリゴン数：7334\n\n5種類のねこちゃんから好きな子を選べます。\n\nリップシンク対応\n感情表現はありませんが「equip」で杖を持ちます。\n\n「all in one package 全部パック」は5種類すべてのVRMファイルと、VRMのカスタマイズができるunitypackageあり。\n\n\n＜更新履歴＞\n2022.02.07　VRM版のみ再販しました。杖を持つシェイプキーを追加。リップシンクを修正しました。","url":"https://booth.pm/ja/items/1064174","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"600","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1064174/4144e390-ce94-4a65-9d95-180a76e19fcf_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vvAkvq7zVR7tKtaOx6UFOvLfjuLNuoNDejoKA9VinDI="></script>
+    nonce="a5+SvRC/EEeNBsPkSewA+aOXdaEK/uPJeJSTXdgFnzs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -926,9 +926,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
