--- a/VRChat/86/1387386.html
+++ b/VRChat/86/1387386.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zvaIjHVbWmJy/uXAXXCmxQwJWdflttmBv6JuxIL/WWk="></script>
+    "/euLeifW6Pj9RRoVSeYbrzV2pfEyIHn4rQ3k20FJte8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルアクセサリー","description":"●導入方法●\n\n1.UNIUNI様のCrystal Shaderを導入する[https://booth.pm/ja/items/1148311]※無くても大きな問題はない\n2.readme（このファイル）と同じ階層にあるUnityPackageを導入\n3.好きなサイズに編集、好きな位置に移動させて追従させたいボーンの直下に配置\n\n\n●利用規約●2019/05/26\n\n・改変及び商用利用可能。\n・VRCでの使用を想定していますがそれ以外の用途も可能（R-18等での使用も規制しません）。\n・本モデルとその関連データは改変の有無に関わらず著作権は製作者の「こんの」\nに帰属するものとします。\n・本モデルとその関連データを使用するにあたり生じたいかなるトラブル、\n損失等について製作者は一切責任を負いません。\n\n\n何か質問があればこちらに連絡をお願いします。\nTwitter:@kon_vr","url":"https://booth.pm/ja/items/1387386","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5784f7f8-3466-4da3-afef-fd33118e4a8b/i/1387386/019904bd-31dc-488c-961d-65e858bf256c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zvaIjHVbWmJy/uXAXXCmxQwJWdflttmBv6JuxIL/WWk="></script>
+    nonce="/euLeifW6Pj9RRoVSeYbrzV2pfEyIHn4rQ3k20FJte8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -360,9 +360,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
