--- a/VRChat/33/1386333.html
+++ b/VRChat/33/1386333.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Z+GHw4E/68Wvy1SWBACPiYi6AF8dNWXeOkBFmKo2SHo="></script>
+    "kwRE+RGOIUVQO+NOUWblSc/IucbPNp35UUb9bgfQbz0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"古そうな軽機関銃1939","description":"3Dモデル「古そうな軽機関銃1939」\n\n◆かつて日本で使用されていた九九式軽機関銃を立体化しました。\n\n◆軽量版21164ポリゴン/通常版37310ポリゴン\n\n◆弾倉は別オブジェクト\nボルト、チャージングハンドル、セーフティ、トリガー、ダストカバー、バイポッドはシェイプキーで動かせます。\n\n◆内容物はunity2018向け.prefabファイル、3Dモデルデータの.fbxファイル、.blenderファイル、\nテクスチャ用.pngファイル、利用規約、商品説明を記したテキストファイル、テクスチャ改変用の.clipファイル、.psdファイル\n\n◆VRCHAT、MMD、ほかゲーム、映像作品、線画の参考等にお使いください。\n\n◆バーチャルマーケット4出品を記念して当該イベント期間中に限り価格を50％引きとさせていただきます。\n\n◆ご購入に際しては利用規約をご熟読ください。\n/////////////////\n// 利 用 規 約 //\n/////////////////\n\n第1条[本規約について]\n1.本規約は「古そうな軽機関銃1939」に含まれる一切のファイル(以下当データ)の知的財産権の帰属、販売者xyz999(以下甲)の免責、利用者(以下乙)による当データの利用範囲について定めるものである。\n2.本規約への同意なしに、乙は当データの使用をすることができない。\n3.乙が当データを購入しダウンロードすることが可能になった時点で、乙は本規約に同意したとみなされる。\n4.本規約は乙に対し事前の相談なく変更されることがあり、常に最新のものが適用される。\n\n第2条[知的財産権ついて]\n・当データ及び、当データから改造されたデータについての著作権は甲に帰属する。\n\n第3条[免責について]\n・乙が当データを使用したことによって被った一切の損害、争いについて甲は関知せず、責任を負わない。\n\n第4条[利用範囲について]\n以下の項目について甲は乙に対し当データの使用を許可する。\n\n1.当データを私的に複製すること。\n2.当データを乙のみが使用可能な状態で、適切な管理のもとにインターネット上のソーシャルネットワークサービス等にアップロードすること。\n3.第三者が当データを当データのまま取り出せないようにした上で、ゲームや映像作品に当モデルを組み込むこと。\n4.ただし乙は政治、宗教活動、他者に対する誹謗中傷目的で、4条2項、4条3項に掲げた内容について使用することはできない。\n5.4条3項に掲げたゲームや映像作品で乙が収益を得ること。\n6.上記に掲げていない事柄のうち甲が特に認めた用途。\n\n第5条[BOOTH利用規約について]\n・甲と乙は当然にBOOTHの定める利用規約に拘束される。\n\n第6条\n・本規約の準拠法は日本国内法に基づく\n\n2019.05.25.制定\n\n2019.05.26 01:00 ver1.0 リリース\n2019.06.22 02:00 ver1.01リリース\n2020.05.01 14:00 ver1.03リリース\n2020.05.01 14:15 価格50%引きセール開始(2020.05.10迄を予定)\n2020.05.10 23:59 価格50%引きセール終了","url":"https://booth.pm/ja/items/1386333","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/3687c18f-f8a3-4fa0-b152-2532e81c2af0/i/1386333/531c69b8-d4bc-4dc0-a83a-70528ac4acca_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Z+GHw4E/68Wvy1SWBACPiYi6AF8dNWXeOkBFmKo2SHo="></script>
+    nonce="kwRE+RGOIUVQO+NOUWblSc/IucbPNp35UUb9bgfQbz0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -450,9 +450,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
