--- a/VRChat/07/1064407.html
+++ b/VRChat/07/1064407.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "T2+/Axnlk/IsHpFcmCt2I6HbrWiwFv+a7OG1CAjc6ak="></script>
+    "b3f2alkSEOz5Z6Xyout5NzeJOVCWn7hoDAIKviAdGqw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おためしさんぐらす黒.unitypackage","description":"VRChatでの利用を想定した、ちょっと凝ったデザインのサングラスです。\n\nさぶすたんすぺいんたーの練習で作りました。\n\nシェイプキーが入っているので、顔のサイズに合わせて調整したり、レンズの角度を調整できるかもしれません。\n\n\n■利用上の注意\n単体や、データが取り出せる形での再配布のみ全て不許可\nただし、VRCでのペデスタル等、データが取り出せない形での再配布は許可します\n再配布以外の利用方法は商用、非商用を問わずご自由にお使いください\n\n使用したSSをSNS等に上げると作者が喜びます\n\n■使用方法や仕様\n・ポリゴン数\n　多分632\n\n・導入方法\n　UnitypackageをUnityにぶちこんで、PrefabをSceneに突っ込むだけで多分使えます\n\nシェイプキー3種類が設定されており、それぞれ\nブリッジの幅\n中央部のでっぱり具合\nレンズの角度\n\nを調整することが出来ます。\n\nヒエラルキーからメガネのメッシュの部分を選択することで編集が可能です。\n\n\n何かご不明な点や不具合などありましたらお気軽に作者ツイッター(@popico_VT)までご連絡ください。","url":"https://booth.pm/ja/items/1064407","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/1064407/ce7da68e-a96a-43ba-a5c2-0a311fdceb2e_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T2+/Axnlk/IsHpFcmCt2I6HbrWiwFv+a7OG1CAjc6ak="></script>
+    nonce="b3f2alkSEOz5Z6Xyout5NzeJOVCWn7hoDAIKviAdGqw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -172,7 +172,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      308
+                                      309
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -188,7 +188,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      308
+                                      309
                                     </div>
                                   </div></a>
                                 </div>
@@ -365,9 +365,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
